update tgl bisnis

--- a/src/app/administrative/tanggalbisnis/tanggalbisnis.component.html
+++ b/src/app/administrative/tanggalbisnis/tanggalbisnis.component.html
@@ -22,8 +22,7 @@
                       <div class="input-group align-middle">
                         <input type="text" class="form-control">
                         <div class="input-group-append" id="button-addon4">
-                          <button mdbBtn color="primary" size="sm" class="m-0 px-3 py-2" type="button" 
-                            mdbWavesEffect>Ubah</button>
+                          <button mdbBtn color="primary" size="sm" class="m-0 px-3 py-2" type="button" mdbWavesEffect>Ubah</button>
                         </div>
                       </div>
                     </div>
@@ -36,20 +35,26 @@
                   </td>
                   <td class="font-weight-normal align-middle">:</td>
                   <td class="font-weight-normal align-middle">
-                      <p>xx/xxxx/xxxx</p><button mdbBtn color="default" size="md" class="m-0 px-3 py-2" type="button" id="button-addon2"
-                      mdbWavesEffect>Button</button>
-                  </td>
-                  <td><button type="button" class="btn btn-primary btn-sm">Buka</button></td>
-                </tr>
-              </table>
+                    <div class="md-form input-group mb-3">
+                    <input type="text" class="form-control" value="21/12/2012" style="width: 100px;">
+                    <div class="input-group-append">
+                      <button mdbBtn color="default" size="md" class="m-0 px-3 py-2" type="button"
+                        mdbWavesEffect>Buka</button>
+                    </div>
             </div>
+
+            </td>
+            <td>
+            </tr>
+            </table>
           </div>
-          <!--panel 1  -->
-          <br>
         </div>
+        <!--panel 1  -->
+        <br>
       </div>
     </div>
   </div>
-  <!-- /Start your project here-->
+</div>
+<!-- /Start your project here-->
 </div>
 <!--Main layout-->
