--- a/src/app/administrative/web-branch-status/web-branch-status.component.html
+++ b/src/app/administrative/web-branch-status/web-branch-status.component.html
@@ -57,21 +57,64 @@
           <!--panel 2-->
           <!--panel 3-->
           <div class="card" style="margin-top: 20px;">
-              <div class="card-body">
-                  <p class="text-left">St</p>
-                  <p class="text-left">Left aligned text on all viewport sizes.</p>
-                  <p class="text-left">Left aligned text on all viewport sizes.</p>
-              </div>
+            <div class="card-body">
+              <table class="table table-borderless">
+                <tr>
+                  <td style="width: 350px;" class="font-weight-bold">
+                    Start of Day Terakhir
+                  </td>
+                  <td style="width: 5px;" class="font-weight-normal">
+                    :
+                  </td>
+                  <td class="font-weight-normal">
+                    28/09/2018, 15:30
+                  </td>
+                </tr>
+                <tr>
+                  <td class="font-weight-bold">
+                    Tanggal Bisnis Sebelumnya
+                  </td>
+                  <td class="font-weight-normal">
+                    :
+                  </td>
+                  <td class="font-weight-normal">
+                    28/09/2018
+                  </td>
+                </tr>
+                <tr>
+                  <td class="font-weight-bold">
+                    Tanggal Bisnis Sekarang
+                  </td>
+                  <td class="font-weight-normal">
+                    :
+                  </td>
+                  <td class="font-weight-normal">
+                    28/09/2018
+                  </td>
+                </tr>
+                <tr>
+                  <td class="font-weight-bold">
+                    Tanggal Bisnis Berikutnnya
+                  </td>
+                  <td class="font-weight-normal">
+                    :
+                  </td>
+                  <td class="font-weight-normal">
+                    28/09/2018
+                  </td>
+                </tr>
+              </table>
             </div>
           </div>
+        </div>
+        <!--panel 3-->
+        <!--Button Bawah-->
+        <div class="d-flex justify-content-center mt-2 mb-2">
+          <button type="button" class="btn btn-primary btn-rounded">EOD</button>
+          <button type="button" class="btn btn-primary btn-rounded">Offline</button>
+          <button type="button" class="btn btn-primary btn-rounded">Reconnect</button>
           <!--panel 3-->
-          <!--Button Bawah-->
-          <div class="d-flex justify-content-center mt-2 mb-2">
-            <button type="button" class="btn btn-primary btn-rounded">EOD</button>
-            <button type="button" class="btn btn-primary btn-rounded">Offline</button>
-            <button type="button" class="btn btn-primary btn-rounded">Reconnect</button>
-            <!--panel 3-->
-         
+
           <!--Button Bawah-->
           <br>
         </div>
