update aktifitas user

--- a/src/app/administrative/aktifitasuser/aktifitasuser.component.html
+++ b/src/app/administrative/aktifitasuser/aktifitasuser.component.html
@@ -1,3 +1,60 @@
-<p>
-  aktifitasuser works!
-</p>
+<app-home-nav></app-home-nav>
+<!--Main layout-->
+<div style="margin: 20px;">
+  <!-- Start your project here-->
+  <div class="d-flex flex-column h-100">
+    <div id="outer" class="d-flex flex-column flex-grow">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Pengaturan Tanggal Bisnis</h5>
+
+          <!--panel 1-->
+          <div class="card">
+            <div class="card-body">
+              <table class="table table-bordered btn-sm">
+                <tr>
+                  <td class="font-weight-bold align-middle" style="width: 250px;">
+                    Tanggal Bisnis Sekarang
+                  </td>
+                  <td class="font-weight-normal align-middle" style="width: 5px;">:</td>
+                  <td class="font-weight-normal align-middle" style="width: 400px;">
+                    <div class="input-group mb-3">
+                      <div class="input-group align-middle">
+                        <input type="text" class="form-control">
+                        <div class="input-group-append" id="button-addon4">
+                          <button mdbBtn color="primary" size="sm" class="m-0 px-3 py-2" type="button" mdbWavesEffect>Ubah</button>
+                        </div>
+                      </div>
+                    </div>
+                  </td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td class="font-weight-bold align-middle">
+                    Buka Cabang Manual
+                  </td>
+                  <td class="font-weight-normal align-middle">:</td>
+                  <td class="font-weight-normal align-middle">
+                    <div class="md-form input-group mb-3">
+                    <input type="text" class="form-control" value="21/12/2012" style="width: 100px;">
+                    <div class="input-group-append">
+                      <button mdbBtn color="default" size="md" class="m-0 px-3 py-2" type="button"
+                        mdbWavesEffect>Buka</button>
+                    </div>
+            </div>
+
+            </td>
+            <td>
+            </tr>
+            </table>
+          </div>
+        </div>
+        <!--panel 1  -->
+        <br>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- /Start your project here-->
+</div>
+<!--Main layout-->
