--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -18,6 +18,7 @@
               <a class="dropdown-item" [routerLink]="['/administrator/daftaruser']">Daftar User</a>
               <a class="dropdown-item" [routerLink]="['/administrator/webbranchstatus']">WebBranch</a>
               <a class="dropdown-item" [routerLink]="['/administrator/tglbisnis']">Pengaturan Tanggal Bisnis</a>
+              <a class="dropdown-item" [routerLink]="['/administrator/aktifitasuser']">Daftar Aktifitas User</a>
             </div>
           </div>
 
