--- a/src/app/administrative/aktifitasuser/aktifitasuser.component.html
+++ b/src/app/administrative/aktifitasuser/aktifitasuser.component.html
@@ -6,55 +6,126 @@
     <div id="outer" class="d-flex flex-column flex-grow">
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title">Pengaturan Tanggal Bisnis</h5>
-
+          <h5 class="card-title">Daftar Aktifitas User</h5>
           <!--panel 1-->
           <div class="card">
             <div class="card-body">
-              <table class="table table-bordered btn-sm">
+              <table class="table table-borderless">
                 <tr>
-                  <td class="font-weight-bold align-middle" style="width: 250px;">
-                    Tanggal Bisnis Sekarang
-                  </td>
-                  <td class="font-weight-normal align-middle" style="width: 5px;">:</td>
-                  <td class="font-weight-normal align-middle" style="width: 400px;">
-                    <div class="input-group mb-3">
-                      <div class="input-group align-middle">
-                        <input type="text" class="form-control">
-                        <div class="input-group-append" id="button-addon4">
-                          <button mdbBtn color="primary" size="sm" class="m-0 px-3 py-2" type="button" mdbWavesEffect>Ubah</button>
-                        </div>
-                      </div>
-                    </div>
-                  </td>
-                  <td></td>
+                  <td class="font-weight-bold">User Id </td>
+                  <td style="width: 5px;">:</td>
+                  <td><strong>Jateng SP</strong></td>
+                  <td style="width: 15%;"></td>
+                  <td class="font-weight-bold">Nama ROLE</td>
+                  <td style="width: 5px;">:</td>
+                  <td><strong>SUPER USER</strong></td>
                 </tr>
                 <tr>
-                  <td class="font-weight-bold align-middle">
-                    Buka Cabang Manual
-                  </td>
-                  <td class="font-weight-normal align-middle">:</td>
-                  <td class="font-weight-normal align-middle">
-                    <div class="md-form input-group mb-3">
-                    <input type="text" class="form-control" value="21/12/2012" style="width: 100px;">
-                    <div class="input-group-append">
-                      <button mdbBtn color="default" size="md" class="m-0 px-3 py-2" type="button"
-                        mdbWavesEffect>Buka</button>
-                    </div>
+                  <td class="font-weight-bold">Nama</td>
+                  <td>:</td>
+                  <td><strong>Jateng SP</strong></td>
+                  <td></td>
+                  <td class="font-weight-bold">IP Address</td>
+                  <td>:</td>
+                  <td><strong>127.0.0.1</strong></td>
+                </tr>
+                <tr>
+                  <td class="font-weight-bold">Waktu Awal</td>
+                  <td>:</td>
+                  <td><strong>23-04-2015 09:33:54:31</strong></td>
+                  <td></td>
+                  <td class="font-weight-bold">Waktu Akhir</td>
+                  <td>:</td>
+                  <td><strong>23-04-2015 09:33:54:31</strong></td>
+                </tr>
+              </table>
             </div>
-
-            </td>
-            <td>
-            </tr>
-            </table>
           </div>
+          <!--panel 1-->
+          <h5 class="card-title" style="margin-top: 10px;">Daftar User</h5>
+          <!--panel 2-->
+          <div class="card">
+            <div class="card-body">
+              <table class="table table-hover">
+                <thead class="grey lighten-2">
+                  <tr class="font-weight-bold">
+                    <th scope="col">Tanggal</th>
+                    <th scope="col">Waktu</th>
+                    <th scope="col">User Id</th>
+                    <th scope="col">Aktifitas</th>
+                    <th scope="col">Lihat Detail</th>
+                  </tr>
+                </thead>
+                <tbody>
+
+                  <tr>
+                    <td class="font-weight-normal">24/5/2013</td>
+                    <td class="font-weight-normal">{{tanggal | date:'shortTime'}}</td>
+                    <td class="font-weight-normal">Jateng SP</td>
+                    <td class="font-weight-normal">Login Succes</td>
+                    <td class="font-weight-normal">
+                        <i class="fa fa-search fa-search"></i>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="font-weight-normal">24/5/2013</td>
+                    <td class="font-weight-normal">{{tanggal | date:'shortTime'}}</td>
+                    <td class="font-weight-normal">Jateng SP</td>
+                    <td class="font-weight-normal">Login Succes</td>
+                    <td class="font-weight-normal">
+                      <i class="fa fa-search fa-search"></i>
+                    </td>
+                  </tr>
+                  <tr>
+                      <td class="font-weight-normal">24/5/2013</td>
+                      <td class="font-weight-normal">{{tanggal | date:'shortTime'}}</td>
+                      <td class="font-weight-normal">Jateng SP</td>
+                      <td class="font-weight-normal">Login Succes</td>
+                      <td class="font-weight-normal">
+                        <i class="fa fa-search fa-search"></i>
+                      </td>
+                    </tr>
+                    <tr>
+                        <td class="font-weight-normal">24/5/2013</td>
+                        <td class="font-weight-normal">{{tanggal | date:'shortTime'}}</td>
+                        <td class="font-weight-normal">Jateng SP</td>
+                        <td class="font-weight-normal">Login Succes</td>
+                        <td class="font-weight-normal">
+                          <i class="fa fa-search fa-search"></i>
+                        </td>
+                      </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+          <!--panel 2-->
+          <!--Pagination-->
+          <div class="d-flex flex-row-reverse" style="margin-top: 15px;">
+            <nav aria-label="Page navigation example">
+              <ul class="pagination pg-blue">
+                <li class="page-item">
+                  <a class="page-link" aria-label="Previous">
+                    <span aria-hidden="true">&laquo; Sebelumnya</span>
+                  </a>
+                </li>
+                <li class="page-item"><a class="page-link">1</a></li>
+                <li class="page-item"><a class="page-link">2</a></li>
+                <li class="page-item"><a class="page-link">3</a></li>
+                <li class="page-item">
+                  <a class="page-link" aria-label="Next">
+                    <span aria-hidden="true">&raquo; Selanjutnya</span>
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <!--Pagination-->
+
+          <br>
         </div>
-        <!--panel 1  -->
-        <br>
       </div>
     </div>
   </div>
-</div>
-<!-- /Start your project here-->
+  <!-- /Start your project here-->
 </div>
 <!--Main layout-->
