--- a/src/app/teller-in/teller-in-penarikan-tunai/teller-in-penarikan-tunai.component.html
+++ b/src/app/teller-in/teller-in-penarikan-tunai/teller-in-penarikan-tunai.component.html
@@ -1,5 +1,6 @@
+<app-home-nav></app-home-nav>
 <!--Main layout-->
-<div style="margin: 20px;margin-top:20vh">
+<div style="margin: 20px;">
     <!-- Start your project heree-->
     <div class="d-flex flex-column h-100">
         <div id="outer" class="d-flex flex-column flex-grow">
