--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -1,46 +1,72 @@
 <main ng-app="myApp">
-   <!-- Start your project here-->
-   <div class="container-fluid justify-content-center">
-     <div>
-<div class="card">
-  <div class="card-header"><h4>Single Sign-on User</h4></div>
-  <div class="card-body">
-<form (submit)= "loginUser($event)">
-       <table>
-        <thead>
-          <tr>
-            <th scope="col" style="min-width:80px;"></th>
-            <th scope="col" style="min-width:5px;"></th>
-            <th scope="col" style="min-width:500px;"></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row"><strong>User ID</strong></th>
-            <td><strong>:</strong></td>
-            <td><input type="text" class="form-control" placeholder="User-ID" id="username" required></td>
-          </tr>
-          <tr>
-            <th scope="row"><strong>Password</strong></th>
-            <td><strong>:</strong></td>
-            <td><input type="password" class="form-control" placeholder="Password" id="password" required></td>
-          </tr>
-          <tr>
-            <th scope="row"></th>
-            <td></td>
-            <td>
-              <button type="submit" class="btn btn-primary btn-md" value="Login"><i class="fa fa-lock"></i>&nbsp;&nbsp;Login</button>
-              <button type="reset" class="btn btn-danger btn-md"><i class="fa fa-close"></i>&nbsp;&nbsp;Cancel</button>
-              <a routerLink="/dashboard">Link</a>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-</form>
+  <!-- Start your project here-->
+  <div class="container-fluid justify-content-center">
+    <div>
+      <div class="card">
+        <div class="card-header">
+          <h4>Single Sign-on User</h4>
+        </div>
+        <div class="card-body">
+          <form (submit)="loginUser($event)">
+            <table>
+              <thead>
+                <tr>
+                  <th scope="col" style="min-width:80px;"></th>
+                  <th scope="col" style="min-width:5px;"></th>
+                  <th scope="col" style="min-width:500px;"></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row"><strong>User ID</strong></th>
+                  <td><strong>:</strong></td>
+                  <td><input type="text" class="form-control" placeholder="User-ID" id="username" required></td>
+                </tr>
+                <tr>
+                  <th scope="row"><strong>Password</strong></th>
+                  <td><strong>:</strong></td>
+                  <td><input type="password" class="form-control" placeholder="Password" id="password" required></td>
+                </tr>
+                <tr>
+                  <th scope="row"></th>
+                  <td></td>
+                  <td>
+                    <button type="submit" class="btn btn-primary btn-md" value="Login"><i class="fa fa-lock"></i>&nbsp;&nbsp;Login</button>
+                    <button type="reset" class="btn btn-danger btn-md"><i class="fa fa-close"></i>&nbsp;&nbsp;Cancel</button>
+                    <a routerLink="/dashboard">Link</a>
+
+                    <button type="button" mdbBtn color="default" rounded="true" data-toggle="modal"
+                      (click)="frame.show()" mdbWavesEffect>Launch Modal</button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </form>
+        </div>
+      </div>
+
+    </div>
+  </div>
+  <!-- /Start your project here-->
+</main>
+
+
+<div mdbModal #basicModal="mdbModal" class="modal fade" tabindex="-1" role="dialog" >
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close pull-right" aria-label="Close" (click)="basicModal.hide()">
+          <span aria-hidden="true">×</span>
+        </button>
+        <h4 class="modal-title w-100" id="myModalLabel">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary waves-light" aria-label="Close" (click)="basicModal.hide()" mdbWavesEffect>Close</button>
+        <button type="button" class="btn btn-primary relative waves-light" mdbWavesEffect>Save changes</button>
+      </div>
+    </div>
   </div>
 </div>
-
-  </div>
-   </div>
-   <!-- /Start your project here-->
-   </main>
