--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -34,9 +34,6 @@
                     <button type="submit" class="btn btn-primary btn-md" value="Login"><i class="fa fa-lock"></i>&nbsp;&nbsp;Login</button>
                     <button type="reset" class="btn btn-danger btn-md"><i class="fa fa-close"></i>&nbsp;&nbsp;Cancel</button>
                     <a routerLink="/dashboard">Link</a>
-
-                    <button type="button" mdbBtn color="default" rounded="true" data-toggle="modal"
-                      (click)="frame.show()" mdbWavesEffect>Launch Modal</button>
                   </td>
                 </tr>
               </tbody>
@@ -51,22 +48,26 @@
 </main>
 
 
-<div mdbModal #basicModal="mdbModal" class="modal fade" tabindex="-1" role="dialog" >
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close pull-right" aria-label="Close" (click)="basicModal.hide()">
-          <span aria-hidden="true">×</span>
-        </button>
-        <h4 class="modal-title w-100" id="myModalLabel">Modal title</h4>
+<div mdbModal #basicModal="mdbModal" class="modal fade modal-notify modal-danger" tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-sm modal-notify modal-danger" role="document">
+    <!--Content-->
+    <div class="modal-content text-center">
+      <!--Header-->
+      <div class="modal-header d-flex justify-content-center">
+        <p class="heading">Login Gagal</p>
       </div>
+
+      <!--Body-->
       <div class="modal-body">
-        ...
+        <i class="fa fa-times fa-4x animated rotateIn"></i>
+        <h5>User atau sandi yang dimasukan salah</h5>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary waves-light" aria-label="Close" (click)="basicModal.hide()" mdbWavesEffect>Close</button>
-        <button type="button" class="btn btn-primary relative waves-light" mdbWavesEffect>Save changes</button>
+
+      <!--Footer-->
+      <div class="modal-footer justify-content-center">
+        <a type="button" mdbBtn color="danger" class="waves-effect" mdbWavesEffect data-dismiss="modal" (click)="basicModal.hide()">OK</a>
       </div>
     </div>
+    <!--/.Content-->
   </div>
 </div>
