--- a/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
+++ b/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
@@ -11,7 +11,7 @@
           <div class="card">
             <div class="card-body">
               <form>
-                <table class="table table-borderless">
+                <table class="table table-striped table-bordered datatable" style="height:25px; text-align:center;">
                   <thead>
                     <tr>
                       <th style="width:4%">User ID</th>
@@ -20,6 +20,14 @@
                       <th style="width:15%">Logout Terakhir</th>
                       <th style="width:8%">Status</th>
                       <th style="width:10%">Kode Departemen</th>
+                    </tr>
+                    <tr>
+                      <td style="text-align:center">{{ .IDNip }}</td>
+                      <td>{{ this.NamaPegawai }}</td>
+                      <td>{{ this.Alamat1 }}</td>
+                      <td>{{ this.NamaFoto }}</td>
+                      <td>{{ this.NoHp }}</td>
+                      <td>{{ this.Jabatan }}</td>
                     </tr>
                   </thead>
                 </table>
