--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -33,7 +33,6 @@
                   <td>
                     <button type="submit" class="btn btn-primary btn-md" value="Login"><i class="fa fa-lock"></i>&nbsp;&nbsp;Login</button>
                     <button type="reset" class="btn btn-danger btn-md"><i class="fa fa-close"></i>&nbsp;&nbsp;Cancel</button>
-                    <a routerLink="/dashboard">Link</a>
                   </td>
                 </tr>
               </tbody>
@@ -60,7 +59,7 @@
       <!--Body-->
       <div class="modal-body">
         <i class="fa fa-times fa-4x animated rotateIn"></i>
-        <h5>User atau sandi yang dimasukan salah</h5>
+        <h5>{{pesanLogin}}</h5>
       </div>
 
       <!--Footer-->
