ubah komponen login

--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -40,13 +40,12 @@
           </form>
         </div>
       </div>
-
     </div>
   </div>
   <!-- /Start your project here-->
 </main>
 
-
+<!--bagian modal untuk pesan login-->
 <div mdbModal #basicModal="mdbModal" class="modal fade modal-notify modal-danger" tabindex="-1" role="dialog">
   <div class="modal-dialog modal-sm modal-notify modal-danger" role="document">
     <!--Content-->
@@ -70,3 +69,4 @@
     <!--/.Content-->
   </div>
 </div>
+<!--Bagian modal untuk pesan login-->
