--- a/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
+++ b/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
@@ -22,12 +22,13 @@
                       <th style="width:10%">Kode Departemen</th>
                     </tr>
                     <tr>
+                      <!--               
                       <td style="text-align:center">{{ .IDNip }}</td>
                       <td>{{ this.NamaPegawai }}</td>
                       <td>{{ this.Alamat1 }}</td>
                       <td>{{ this.NamaFoto }}</td>
                       <td>{{ this.NoHp }}</td>
-                      <td>{{ this.Jabatan }}</td>
+                      <td>{{ this.Jabatan }}</td> -->
                     </tr>
                   </thead>
                 </table>
