--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -36,12 +36,6 @@
               <a class="dropdown-item" [routerLink]="['/tellerin/pinbukbedauang']">Pindah Buku Beda Uang</a>
             </div>
           </div>
-
-
-
-
-
-
           <!-- Default form contact -->
           <br><br><br><br><br><br><br>
         </div>
@@ -51,3 +45,5 @@
   <!-- /Start your project here-->
 </div>
 <!--Main layout-->
+
+<app-footer-home></app-footer-home>
