--- a/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
+++ b/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
@@ -22,9 +22,12 @@
                       <th style="width:10%">Kode Departemen</th>
                     </tr>
                     <tr *ngFor="let record of ktrlusers; let i = index; let evenRecords = even; let oddRecords = odd;let firsRecords = first; let lastRecords = last;" [ngClass]="{odd:oddRecords, even:evenRecords, first : firsRecords, last : lastRecords}">
-                      <td>{{i+1}}</td>
-                      <td>{{record.name}}</td>
-                      <td>{{record.status}}</td>
+                      <td>{{record.UserId}}</td>
+                      <td>{{record.Nama}}</td>
+                      <td>{{record.LoginAkhir}}</td>
+                      <td>{{record.LogoutAkhir}}</td>
+                      <td>{{record.Status}}</td>
+                      <td>{{record.KodeDept}}</td>
                     </tr>
                   </thead>
                 </table>
