--- a/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
+++ b/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
@@ -12,7 +12,7 @@
             <div class="card-body">
               <form>
                 <table class="table table-striped table-bordered datatable" style="height:25px; text-align:center;">
-                  <thead>
+                  <thead class="thead-light">
                     <tr>
                       <th style="width:4%;line-height: 1.2">User ID</th>
                       <th style="width:24%;line-height: 1.2">Nama</th>
