--- a/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
+++ b/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
@@ -11,7 +11,7 @@
           <div class="card">
             <div class="card-body">
               <form>
-                <table class="table table-striped table-bordered datatable" style="height:25px; text-align:center;">
+                <table class="table table-striped table-hover table-bordered" style="height:25px; text-align:center;">
                   <thead class="thead-light">
                     <tr>
                       <th style="width:4%;line-height: 1.2">User ID</th>
