--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--Main Navigation-->
-<app-header><h2>ok</h2></app-header>
+<app-header></app-header>
 <!--Main Navigation-->
 <!--Main layout-->
 <!-- Start your project here-->
