--- a/src/app/teller-in/teller-in-pindah-buku-beda-uang/teller-in-pindah-buku-beda-uang.component.html
+++ b/src/app/teller-in/teller-in-pindah-buku-beda-uang/teller-in-pindah-buku-beda-uang.component.html
@@ -114,7 +114,7 @@
                     <td class="text-right" class="font-weight-normal">Nilai Transaksi Debit</td>
                     <td></td>
                     <td>
-                      <select class="custom-select" style="width: 200px;">
+                      <select class="custom-select" name="optmatauangdbt" id="optmatauangdbt" style="width: 200px;">
                         <option selected>Pilih Salah Satu</option>
                         <option value="1">One</option>
                         <option value="2">Two</option>
@@ -123,7 +123,7 @@
                       <span style="display:inline-block; width: 50px;"></span> <span class="font-weight-normal">Ekuivalen</span>
                     </td>
                     <td>
-                      <select class="custom-select" style="width: 200px;">
+                      <select class="custom-select" name="optmatauangkrd" id="optmatauangkrd" style="width: 200px;">
                         <option selected>Pilih Salah Satu</option>
                         <option value="1">One</option>
                         <option value="2">Two</option>
@@ -148,10 +148,10 @@
                       </div>
                     </td>
                     <td>
-                        <div class="input-group">
-                            <span class="align-bottom">=</span> &nbsp;&nbsp;
-                            <input type="text" class="form-control form-control-sm">
-                          </div>
+                      <div class="input-group">
+                        <span class="align-bottom">=</span> &nbsp;&nbsp;
+                        <input type="text" class="form-control form-control-sm">
+                      </div>
                     </td>
                     <td>X</td>
                     <td>
