--- a/src/app/teller-in/teller-in-penarikan-tunai/teller-in-penarikan-tunai.component.html
+++ b/src/app/teller-in/teller-in-penarikan-tunai/teller-in-penarikan-tunai.component.html
@@ -48,15 +48,16 @@
                                 <td></td>
                             </tr>
                             <tr>
-                                <td style="width: 130px;">Kode Departemen</td>
-                                <td style="width: 30px;">:</td>
-                                <select class="form-control" ng-model="kodedepartemen" name="kodedepartemen">
-                                    <option>DC</option>
-                                    <option>EC</option>
-                                    <option>FC</option>
-                                    <option>GC</option>
-                                </select>
-                                <td colspan="2"></td>
+                                <td class="font-weight-normal">Kode Departemen</td>
+                                <td>:</td>
+                                <td>
+                                    <select class="custom-select" name="optkodedept" id="optkodedept" style="width: 200px;">
+                                        <option selected>Pilih Salah Satu</option>
+                                        <option value="1">One</option>
+                                        <option value="2">Two</option>
+                                        <option value="3">Three</option>
+                                    </select>
+                                </td>
                             </tr>
                             <tr>
                                 <td style="width: 130px;">Keterangan</td>
@@ -67,15 +68,16 @@
                                 <td></td>
                             </tr>
                             <tr>
-                                <td style="width: 130px;">Kode Taspen</td>
-                                <td style="width: 30px;">:</td>
-                                <select class="form-control" ng-model="kodedepartemen" name="kodedepartemen">
-                                    <option>DC</option>
-                                    <option>EC</option>
-                                    <option>FC</option>
-                                    <option>GC</option>
-                                </select>
-                                <td colspan="2"></td>
+                                <td class="font-weight-normal">Kode Taspen</td>
+                                <td>:</td>
+                                <td>
+                                    <select class="custom-select" name="optkodetaspen" id="optkodetaspen" style="width: 200px;">
+                                        <option selected>Pilih Salah Satu</option>
+                                        <option value="1">One</option>
+                                        <option value="2">Two</option>
+                                        <option value="3">Three</option>
+                                    </select>
+                                </td>
                             </tr>
                             <tr>
                                 <td style="width: 130px;"></td>
@@ -91,7 +93,7 @@
                             </tr>
                         </table>
                     </form>
-                    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                    <br><br><br>
                 </div>
             </div>
 
