--- a/src/app/teller-in/teller-in-selisih-kas/teller-in-selisih-kas.component.html
+++ b/src/app/teller-in/teller-in-selisih-kas/teller-in-selisih-kas.component.html
@@ -25,15 +25,16 @@
                   <td></td>
               </tr>
               <tr>
-                  <td style="width: 130px;">Mata Uanng</td>
-                  <td style="width: 30px;">:</td>
-                  <select class="form-control" ng-model="optmatauang" name="optmatauang">
-                    <option>IDR</option>
-                    <option>USD</option>
-                    <option>YEN</option>
-                    <option>EURO</option>
+                <td class="font-weight-normal">Mata Uang</td>
+                <td>:</td>
+                <td>
+                  <select class="custom-select" name="optmatauang" id="optmatauang" style="width: 200px;">
+                    <option selected>Pilih Salah Satu</option>
+                    <option value="1">IDR</option>
+                    <option value="2">USD</option>
+                    <option value="3">YEN</option>
                   </select>
-                  <td colspan="2"></td>
+                </td>
               </tr>
               <tr>
                 <td style="width: 130px;">Nilai Transaksi</td>
@@ -43,16 +44,17 @@
                 <td></td>
               </tr>
               <tr>
-                  <td style="width: 130px;">Kode Departemen</td>
-                  <td style="width: 30px;">:</td>
-                  <select class="form-control" ng-model="optdepartemen" name="optdepartemen">
-                    <option>DC</option>
-                    <option>EC</option>
-                    <option>FC</option>
-                    <option>GC</option>
+                <td class="font-weight-normal">Kode Departemen</td>
+                <td>:</td>
+                <td>
+                  <select class="custom-select" name="optkodedept" id="optkodedept" style="width: 200px;">
+                    <option selected>Pilih Salah Satu</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
                   </select>
-                  <td colspan="2"></td>
-                </tr>
+                </td>
+              </tr>
               <tr>
                 <td style="width: 130px;">Keterangan</td>
                 <td style="width: 30px;">:</td>
@@ -60,7 +62,6 @@
                 <td></td>
                 <td></td>
               </tr>
-         
               <tr>
                 <td style="width: 130px;"></td>
                 <td style="width: 30px;"></td>
@@ -73,7 +74,7 @@
               </tr>
             </table>
           </form>
-          <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+          <br><br><br>
         </div>
       </div>
 
