--- a/src/app/passbook/ulang-passbook/ulang-passbook.component.html
+++ b/src/app/passbook/ulang-passbook/ulang-passbook.component.html
@@ -15,7 +15,7 @@
                     <tr style="height: 10px;">
                       <td style="width: 190px;" class="font-weight-normal">No.Rekening</td>
                       <td style="width: 5px;">:</td>
-                      <td style="width: 500px;"><input type="text" style="width: 250px;" class="form-control form-control-sm"></td>
+                      <td style="width: 500px;"><input type="text" name="norekening" id="norekening" style="width: 250px;" class="form-control form-control-sm"></td>
                       <td style="width: 350px;"></td>
                       <td style="width: 5px;"></td>
                       <td style="width: 5px;"></td>
@@ -24,7 +24,7 @@
                     <tr style="height: 10px;">
                       <td style="width: 190px;" class="font-weight-normal">Buku Mulai</td>
                       <td style="width: 5px;">:</td>
-                      <td style="width: 500px;"><input type="text" style="width: 250px;" class="form-control form-control-sm"></td>
+                      <td style="width: 500px;"><input type="text" name="bukumulai" id="bukumulai" style="width: 250px;" class="form-control form-control-sm"></td>
                       <td style="width: 350px;"></td>
                       <td style="width: 5px;"></td>
                       <td style="width: 5px;"></td>
@@ -34,7 +34,7 @@
                       <td class="font-weight-normal">Tanggal Mulai</td>
                       <td>:</td>
                       <td>
-                        <select class="custom-select" style="width: 200px;">
+                        <select class="custom-select" name="tglmulai" id="tglmulai" style="width: 200px;">
                           <option selected>Pilih Salah Satu</option>
                           <option value="1">One</option>
                           <option value="2">Two</option>
