--- a/src/app/teller-in/teller-in-pindah-buku-beda-uang/teller-in-pindah-buku-beda-uang.component.html
+++ b/src/app/teller-in/teller-in-pindah-buku-beda-uang/teller-in-pindah-buku-beda-uang.component.html
@@ -15,7 +15,7 @@
                   <tr style="height: 10px;">
                     <td style="width: 270px;" class="font-weight-normal">Tanggal Valuta</td>
                     <td style="width: 5px;">:</td>
-                    <td style="width: 500px;"><input type="text" style="width: 250px;" class="form-control-sm"></td>
+                    <td style="width: 500px;"><input type="text" name="tglvaluta" id="tglvaluta" style="width: 250px;" class="form-control form-control-sm"></td>
                     <td style="width: 350px;"></td>
                     <td style="width: 5px;"></td>
                     <td style="width: 5px;"></td>
@@ -24,7 +24,7 @@
                   <tr>
                     <td class="font-weight-normal">No Referensi</td>
                     <td>:</td>
-                    <td><input type="text" style="width: 250px;" class="form-control-sm"></td>
+                    <td><input type="text" name="noreferensi" id ="noreferensi" style="width: 250px;" class="form-control form-control-sm"></td>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -39,10 +39,10 @@
                   <tr>
                     <td class="font-weight-normal">No Rekening Debit</td>
                     <td>:</td>
-                    <td><input type="text" style="width: 250px;" class="form-control form-control-sm"></td>
+                    <td><input type="text" name="norekdbt" id="norekdbt" style="width: 250px;" class="form-control form-control-sm"></td>
                     <td class="font-weight-normal">Nilai Transaksi Debit</td>
                     <td>:</td>
-                    <td><input type="text" style="width: 200px;" class="form-control form-control-sm"></td>
+                    <td><input type="text" name="niltransdbt" id="niltransdbt" style="width: 200px;" class="form-control form-control-sm"></td>
                     <td></td>
                     <td></td>
                   </tr>
@@ -54,7 +54,7 @@
                   <tr>
                     <td class="font-weight-normal">No Rekening Kredit</td>
                     <td>:</td>
-                    <td><input type="text" style="width: 250px;" class="form-control form-control-sm"></td>
+                    <td><input type="text" name="norekkrd" id="norekkrd" style="width: 250px;" class="form-control form-control-sm"></td>
                     <td class="font-weight-normal">Nilai Transaksi Kredit</td>
                     <td>:</td>
                     <td><input type="text" style="width: 200px;" class="form-control form-control-sm"></td>
@@ -63,7 +63,7 @@
                   <tr>
                     <td class="font-weight-normal">Nilai Ekuivalen</td>
                     <td style="width: 5px;">:</td>
-                    <td><input type="text" style="width: 250px;" class="form-control form-control-sm"></td>
+                    <td><input type="text" name="nilekuivalen" id="inlekuivalen" style="width: 250px;" class="form-control form-control-sm"></td>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -84,7 +84,7 @@
                     <td class="font-weight-normal">Keterangan</td>
                     <td style="width: 5px;">:</td>
                     <td>
-                      <textarea rows="4" cols="50" class="form-control form-control-sm"></textarea>
+                      <textarea rows="4" name="keterangan" id="keterangan" cols="50" class="form-control form-control-sm"></textarea>
                     </td>
                     <td></td>
                     <td></td>
@@ -137,25 +137,25 @@
                   </tr>
                   <tr>
                     <td class="text-right">
-                      <input type="text" class="form-control form-control-sm">
+                      <input type="text" name="niltrandbt1" id="niltrandbt1" class="form-control form-control-sm">
                     </td>
                     <td>x</td>
                     <td>
                       <div class="input-group">
-                        <input type="text" class="form-control form-control-sm">
+                        <input type="text" name="niltrandbt2" id="niltrandbt2" class="form-control form-control-sm">
                         <span class="align-bottom">=</span>
-                        <input type="text" class="form-control form-control-sm">
+                        <input type="text" name="nilekuivalen2" id="nilekuivalen2" class="form-control form-control-sm">
                       </div>
                     </td>
                     <td>
                       <div class="input-group">
                         <span class="align-bottom">=</span> &nbsp;&nbsp;
-                        <input type="text" class="form-control form-control-sm">
+                        <input type="text" name="niltrankrd1" id="niltrankrd1" class="form-control form-control-sm">
                       </div>
                     </td>
                     <td>X</td>
                     <td>
-                      <input type="text" class="form-control form-control-sm" style="width: 200px;">
+                      <input type="text" name="niltrakrd2" id="niltrankrd2" class="form-control form-control-sm" style="width: 200px;">
                     </td>
                     <td colspan="2"></td>
                   </tr>
