--- a/src/app/teller-in/teller-in-selisih-kas/teller-in-selisih-kas.component.html
+++ b/src/app/teller-in/teller-in-selisih-kas/teller-in-selisih-kas.component.html
@@ -13,13 +13,13 @@
               <tr>
                 <td style="width: 130px;">Tanggal Valuta</td>
                 <td style="width: 30px;">:</td>
-                <td><input type="text" ng-model="tglvaluta" name="tglvaluta" class="form-control" style="width: 400px;"></td>
+                <td><input type="text" name="tglvaluta" id="tglvaluta" class="form-control form-control-sm" style="width: 400px;"></td>
                 <td colspan="2"></td>
               </tr>
               <tr>
                   <td style="width: 130px;">Nomor Referensi</td>
                   <td style="width: 30px;">:</td>
-                  <td><input type="text" ng-model="norefernsi" name="norefernsi" class="form-control"
+                  <td><input type="text" name="norefernsi" id="norefernsi" class="form-control form-control-sm"
                           style="width: 400px;"></td>
                   <td></td>
                   <td></td>
@@ -39,7 +39,7 @@
               <tr>
                 <td style="width: 130px;">Nilai Transaksi</td>
                 <td style="width: 30px;">:</td>
-                <td><input type="text" ng-model="nilaitransaksi" name="nilaitransaksi" class="form-control" style="width: 400px;"></td>
+                <td><input type="text" name="nilaitransaksi" id="nilaitransaksi" class="form-control form-control-sm" style="width: 400px;"></td>
                 <td></td>
                 <td></td>
               </tr>
@@ -56,9 +56,12 @@
                 </td>
               </tr>
               <tr>
-                <td style="width: 130px;">Keterangan</td>
-                <td style="width: 30px;">:</td>
-                <td><input type="text" ng-model="keterangan" name="keterangan" class="form-control" style="width: 400px;"></td>
+                <td class="font-weight-normal">Keterangan</td>
+                <td style="width: 5px;">:</td>
+                <td>
+                  <textarea rows="4" name="keterangan" id="keterangan" cols="50" class="form-control form-control-sm"></textarea>
+                </td>
+                <td></td>
                 <td></td>
                 <td></td>
               </tr>
