--- a/src/app/teller-in/teller-in-penarikan-tunai/teller-in-penarikan-tunai.component.html
+++ b/src/app/teller-in/teller-in-penarikan-tunai/teller-in-penarikan-tunai.component.html
@@ -13,36 +13,39 @@
                             <tr>
                                 <td style="width: 130px;">Tanggal Valuta</td>
                                 <td style="width: 30px;">:</td>
-                                <td><input type="text" ng-model="tglvaluta" name="tglvaluta" class="form-control" style="width: 400px;"></td>
+                                <td><input type="text" name="tglvaluta" id="tglvaluta" class="form-control form-control-sm"
+                                        style="width: 400px;"></td>
                                 <td colspan="2"></td>
                             </tr>
                             <tr>
-                              <div class="form-check" style="text-align: left">
-                                <input class="form-check-input" type="radio" ng-model="radio1" name="radio1" value="option1" checked>
-                                <td style="width: 130px;">Nomor Referensi</td>
-                              </div>
-                              <td style="width: 30px;">:</td>
-                              <td colspan="2"></td>
+                                <div class="form-check" style="text-align: left">
+                                    <input class="form-check-input" type="radio" name="radio1" id="radio1" value="option1"
+                                        checked>
+                                    <td style="width: 130px;">Nomor Referensi</td>
+                                </div>
+                                <td style="width: 30px;">:</td>
+                                <td colspan="2"></td>
                             </tr>
                             <tr>
-                              <div class="form-check" style="text-align: left">
-                                <input class="form-check-input" type="radio" ng-model="radio1" name="radio1" value="option1" checked>
-                                <td style="width: 130px;">Nomor Cheque</td>
-                              </div>
-                              <td style="width: 30px;">:</td>
-                              <!-- <td><input type="text" ng-model="tglvaluta" name="tglvaluta" class="form-control" style="width: 400px;"></td> -->
+                                <div class="form-check" style="text-align: left">
+                                    <input class="form-check-input" type="radio" name="radio1" id="radio1" value="option1"
+                                        checked>
+                                    <td style="width: 130px;">Nomor Cheque</td>
+                                </div>
+                                <td style="width: 30px;">:</td>
+                                <!-- <td><input type="text" ng-model="tglvaluta" name="tglvaluta" class="form-control" style="width: 400px;"></td> -->
                             </tr>
                             <tr>
                                 <td style="width: 130px;">Nomor Rekening</td>
                                 <td style="width: 30px;">:</td>
-                                <td><input type="text" ng-model="norekening" name="norekening" class="form-control"
+                                <td><input type="text" name="norekening" id="norekening" class="form-control form-control-sm"
                                         style="width: 400px;"></td>
                                 <td colspan="2"></td>
                             </tr>
                             <tr>
                                 <td style="width: 130px;">Nilai Transaksi</td>
                                 <td style="width: 30px;">:</td>
-                                <td><input type="text" ng-model="nilaitransaksi" name="nilaitransaksi" class="form-control"
+                                <td><input type="text" name="nilaitransaksi" id="nilaitransaksi" class="form-control form-control-sm"
                                         style="width: 400px;"></td>
                                 <td></td>
                                 <td></td>
@@ -62,7 +65,7 @@
                             <tr>
                                 <td style="width: 130px;">Keterangan</td>
                                 <td style="width: 30px;">:</td>
-                                <td><input type="text" ng-model="keterangan" name="keterangan" class="form-control"
+                                <td><input type="text" name="keterangan" id="keterangan" class="form-control form-control-sm"
                                         style="width: 400px;"></td>
                                 <td></td>
                                 <td></td>
